--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ jupyter-core==4.4.0
 Keras-Applications==1.0.7
 Keras-Preprocessing==1.0.9
 kiwisolver==1.0.1
+lightgbm==2.2.3
 Markdown==3.0.1
 matplotlib==3.0.3
 mock==2.0.0
@@ -38,10 +39,11 @@ seaborn==0.9.0
 six==1.12.0
 sklearn==0.0
 tensorboard==1.13.1
-tensorflow-gpu==1.13.1
+tensorflow==1.13.1
 tensorflow-estimator==1.13.0
 termcolor==1.1.0
 tornado==6.0.1
 traitlets==4.3.2
 wcwidth==0.1.7
 Werkzeug==0.14.1
+xgboost==0.82
